# mobile-robot-engineer-skill

./: .gitignore  README.md
.agents/skills/engineer-wheeled-robot-systems/: SKILL.md
.agents/skills/engineer-wheeled-robot-systems/agents/: openai.yaml
.agents/skills/engineer-wheeled-robot-systems/references/: decision-navigation-and-control.md  description-simulation-and-sim2real.md  diagnosis-and-verification.md  evaluation-and-source-comparison.md  hardware-embedded-and-time.md  perception-localization-and-mapping.md  (+8 more)
docs/: AGENT_HANDOFF_REAL_ROBOT.md  EXECUTION_AGENT_P04_DYNAMIC_PATROL.md  EXECUTION_AGENT_SIMULATION_VALIDATION.md
evals/results/: diff-jetson-stm32-gazebo-contract.json  diff-jetson-stm32-gazebo-solution.md  f1tenth-system-v0.md  linorobot2-v0.md
evals/scenarios/: ackermann-ros1-migration.json  diff-jetson-stm32-gazebo.json  mecanum-ipc-isaac.json  mini-diff-solution.json  swerve-four-module-mujoco.json
tests/: test_skill_scripts.py
tests/fixtures/integration/: integration_contract.json  module_manifest.json  requirements_trace.json
tests/fixtures/mini_diff_ws/src/mini_diff_robot/: CMakeLists.txt  package.xml
tests/fixtures/mini_diff_ws/src/mini_diff_robot/config/: controllers.yaml  robot_contract.json
tests/fixtures/mini_diff_ws/src/mini_diff_robot/description/: robot.urdf.xacro
tests/fixtures/mini_diff_ws/src/mini_diff_robot/launch/: bringup.launch.py
tests/fixtures/mini_diff_ws/src/mini_diff_robot/src/: base_monitor.cpp
tests/fixtures/runtime_evidence/: action_trace.json  fault_injection_trace.json  runtime_observation.json
(+14 files in other folders)
