<?xml version="1.0"?>
<package format="3">
  <name>mini_diff_robot</name>
  <version>0.1.0</version>
  <description>Static fixture for the wheeled robot skill.</description>
  <maintainer email="fixture@example.com">Fixture</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>ros2_control</depend>
  <depend>ros_gz_sim</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
